--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -175,7 +175,7 @@ a, a:hover, a:visited, a:active, a:link {
 }
 
 .fa-bell::before {
-  font-size: x-large;
+  font-size: large;
 }
 
 .fa-user-circle::before {
