--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="col header_container">
       <div class="side-nav">
         <div id="sidebarCollapse">
-          <%= icon "fa", "bars" %>
+          <%= fa_icon "bars" %>
         </div>
 
         <%= link_to root_path do %>
@@ -15,7 +15,7 @@
         <form class="search-form">
           <input class="form-control height-24" placeholder="<%= t ".search_anything" %>" type="text">
           <button class="btn btn-link search-btn">
-            <%= icon "fa", "search" %>
+            <%= fa_icon "search" %>
           </button>
         </form>
       </div>
@@ -24,8 +24,8 @@
         <li><%= link_to t(".ic_staffs"), "#" %></li>
         <li><%= link_to t(".international_partners"), "#" %></li>
         <li><%= link_to t(".about"), "#" %></li>
-        <li><%= icon "fa", "bell" %></li>
-        <li><%= icon "fa", "user-circle" %></li>
+        <li><%= fa_icon "bell" %></li>
+        <li><%= fa_icon "user-circle" %></li>
       </ul>
     </div>
   </div>
