--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -83,7 +83,11 @@ a, a:hover, a:visited, a:active, a:link {
 }
 
 .no-padding {
-  padding: 0px;
+  padding: 0;
+}
+
+.no-margin {
+  margin: 0;
 }
 
 .pl-45 {
