--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track": "reload" %>
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
   </head>
 
   <body>
-    <% flash.each do |message_type, message| %>
-      <%= content_tag :div, message, class: "alert alert-#{message_type}" %>
-    <% end %>
-    
     <% if user_signed_in? %>
       <%= render "layouts/header" %>
       <%= render "layouts/sidebar" %>
@@ -31,4 +27,8 @@
       </div>
     </div>
   </body>
+
+  <% flash.each do |type, text| %>
+    <%= javascript_tag "noty('#{text}', '#{check_noty_type type}');" %>
+  <% end %>
 </html>
