--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,8 +26,7 @@
         <li><%= link_to t(".about"), "#", class: "child" %></li>
         <li><%= fa_icon "bell" %></li>
         <li class="dropdown">
-          <%= link_to "#", class: "dropdown-toggle no-after",
-            data: {toggle: "dropdown"} do %>
+          <%= link_to "#", class: "dropdown-toggle no-after", data: {toggle: "dropdown"} do %>
             <%= fa_icon "user-circle" %>
           <% end %>
 
@@ -37,9 +36,9 @@
                 <%= link_to t(".manage_page"), rails_admin.dashboard_path %>
               </li>
             <% end %>
-            <li><%= link_to t(".profile"), "#" %></li><hr class="no-margin"/>
-            <li><%= link_to t(".logout"), destroy_user_session_path,
-              method: :delete %></li>
+            <li><%= link_to t(".profile"), user_path(id: current_user.id) %></li>
+            <hr class="no-margin"/>
+            <li><%= link_to t(".logout"), destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
       </ul>
