--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -12,7 +12,7 @@
         <%= event_date event %>
       </div>
       <div class="participants">
-        <%= fa_icon "users" %>
+        <%= fa_icon "user-o" %>
         <%= event_participants event %>
       </div>
     </div>
