--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,13 @@
-<% Settings.model.event.sorted_by.keys.each do |filter| %>
-  <div class="row no-margin justify-content-center mb-15">
-    <div>
-      <h3 class="mt-25"><%= t ".#{filter}" %></h3>
-      <div id="<%= filter %>_courses">
-        <%= render @events %>
+<div class="container">
+  <% Settings.model.event.sorted_by.keys.each do |filter| %>
+    <div class="row no-margin justify-content-center mb-15">
+      <div>
+        <h3 class="mt-25"><%= t ".#{filter}" %></h3>
+        <div id="<%= filter %>_courses">
+          <%= render @events %>
+        </div>
+        <hr class="separate_course"/>
       </div>
-      <hr class="separate_course"/>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
