--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -1,10 +1,8 @@
-@import 'bootstrap';
-
 $sidebar_a_gray: #4e4e4e;
 $input_gray: #f2f1f8;
 $body_gray: #6c6a74;
 
-.course_detail {
+.content_detail {
   font-weight: normal;
   padding-bottom: 100px;
   padding-top: 30px;
@@ -38,13 +36,13 @@ $body_gray: #6c6a74;
   padding-top: 56.25%;
 }
 
-.course_tab_container {
-  margin-top: 20px;
+.tab_panels {
+  z-index: 7;
 }
 
 .tab_panel {
   animation: fadeEffect 1s ease;
-  display: none;
+  display: none !important;
   border: solid 1px rgba(0, 0, 0, 0.1);
   padding: 30px;
   -webkit-animation: fadeEffect 1s ease;
@@ -53,7 +51,7 @@ $body_gray: #6c6a74;
   -o-animation: fadeEffect 1s ease;
 
   &.active {
-    display: block;
+    display: block !important;
   }
 }
 
