Rename to Enroll

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -53,7 +53,9 @@
                   <%= event_participants @event %>
                 </div>
                 <div class="mt-20">
-                  <div class="button button-text"><%= t ".enroll" %></div>
+                  <div id="enroll_button">
+                    <%= render "enroll_button", current_user: current_user, event: @event %>
+                  </div>
                 </div>
               </div>
             </div>
@@ -96,15 +98,6 @@
                         <%= event_participants @event %>
                       </div>
                     </div>
-                  </div>
-                  <div class="form">
-                    <% if current_user_is_following(current_user.id, @event.id) %>
-                      <%= link_to t(".following"), unfollow_event_path(event_id: @event.id),
-                                  method: :delete, id: "unfollow-button", remote: true, class: "button" %>
-                    <% else %>
-                      <%= link_to t(".follow"), follow_event_path(event_id: @event.id), method: :post, id: "follow-button",
-                                  remote: true, class: "button" %>
-                    <% end %>
                   </div>
                 </div>
               <% end %>
